<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activityInfo_parentLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/activityInfoxfmghf_textInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/canaro_extra_bold"
        android:gravity="center"
        android:text="@string/activityInfoxfmghf_textInfo"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activityInfo_imageJM"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/app_name"
        android:padding="8dp"
        android:src="@drawable/jmedinilla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityInfoxfmghf_textInfo" />

    <TextView
        android:id="@+id/activityInfo_gitJM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/github_circle"
        android:drawableLeft="@drawable/github_circle"
        android:drawablePadding="8dp"
        android:fontFamily="@font/canaro_extra_bold"
        android:text="@string/activityInfo_gitJM"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityInfo_imageJM" />

    <ImageView
        android:id="@+id/activityInfo_imageAPU"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/app_name"
        android:padding="8dp"
        android:src="@drawable/alexpowerup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityInfo_gitJM" />

    <TextView
        android:id="@+id/activityInfo_twAPU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/twitter"
        android:drawableLeft="@drawable/twitter"
        android:drawablePadding="8dp"
        android:fontFamily="@font/canaro_extra_bold"
        android:text="@string/activityInfo_twAPU"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityInfo_imageAPU" />

    <TextView
        android:id="@+id/activityInfo_gitAPU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/github_circle"
        android:drawableLeft="@drawable/github_circle"
        android:drawablePadding="8dp"
        android:fontFamily="@font/canaro_extra_bold"
        android:text="@string/activityInfo_gitAPU"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityInfo_twAPU" />
</android.support.constraint.ConstraintLayout>