<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMain_parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/activityMain_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/activityMain_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetStart="0dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/activityMain_toolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/activityMain_toolbarText"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/activityMain_toolbarInfo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/activityMain_toolbarLayoutTextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/canaro_extra_bold"
                        android:text="@string/app_name"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/activityMain_toolbarLayoutTextSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/canaro_extra_bold"
                        android:text="@string/toolbarsub"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/activityMain_toolbarInfo"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="36dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/information_variant"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/activityMain_JODER"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="14dp"
        android:background="@drawable/border"
        android:fontFamily="@font/canaro_extra_bold"
        android:gravity="center"
        android:padding="14dp"
        android:scrollbars="vertical"
        android:text="@string/JODERDefault"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/activityMain_guideline_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityMain_appBarLayout" />

    <LinearLayout
        android:id="@+id/activityMain_actionLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/activityMain_JODER"
        app:layout_constraintTop_toBottomOf="@+id/activityMain_JODER">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/activityMain_actionShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:src="@drawable/share_variant"
            app:fabSize="mini"
            app:rippleColor="@color/colorPrimaryDark" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/activityMain_actionCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:src="@drawable/clipboard_outline"
            app:fabSize="mini"
            app:rippleColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activityMain_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/icon"
        android:scaleType="center"
        android:src="@drawable/icon_transparent"
        android:visibility="visible"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/activityMain_generateTxtMax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityMain_JODER" />

    <TextView
        android:id="@+id/activityMain_generateTxtMin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/canaro_extra_bold"
        android:text="@string/txtMin"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/activityMain_generateEdtMin"
        app:layout_constraintEnd_toEndOf="@+id/activityMain_generateEdtMin"
        app:layout_constraintStart_toStartOf="@+id/activityMain_generateEdtMin" />

    <TextView
        android:id="@+id/activityMain_generateTxtMax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/canaro_extra_bold"
        android:text="@string/txtMax"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/activityMain_generateEdtMax"
        app:layout_constraintEnd_toEndOf="@+id/activityMain_generateEdtMax"
        app:layout_constraintStart_toStartOf="@+id/activityMain_generateEdtMax" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/activityMain_generateEdtMin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:fontFamily="@font/canaro_extra_bold"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/edtDefault"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activityMain_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityMain_guideline_2" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/activityMain_generateEdtMax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:fontFamily="@font/canaro_extra_bold"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/edtDefault"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/activityMain_guideline"
        app:layout_constraintTop_toTopOf="@+id/activityMain_guideline_2" />

    <android.support.constraint.Guideline
        android:id="@+id/activityMain_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/activityMain_guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/activityMain_guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />
</android.support.constraint.ConstraintLayout>
